Inserção de figuras

--- a/README.html
+++ b/README.html
@@ -365,22 +365,27 @@ code {
           : 'default'
     });
   </script>
-<h1 id="scripts-para-o-curso-de-aplica%C3%A7%C3%A3o-de-python-na-agrometeorologia-realizado-no-congresso-brasileiro-de-agrometeorologia---2023">Scripts para o curso de Aplicação de Python na Agrometeorologia realizado no Congresso Brasileiro de Agrometeorologia - 2023</h1>
+<h1 id="scripts-para-o-curso-de-aplica%C3%A7%C3%A3o-de-python-na-agrometeorologia-realizado-no-xxii-congresso-brasileiro-de-agrometeorologia---outubro-de-2023">Scripts para o curso de Aplicação de Python na Agrometeorologia realizado no XXII Congresso Brasileiro de Agrometeorologia - outubro de 2023</h1>
 <h2 id="informa%C3%A7%C3%B5es-gerais-sobre-o-curso">Informações gerais sobre o curso</h2>
 <ul>
 <li>Curso: Aplicação de Python na Agrometeorologia.</li>
 <li>Ministrante: Dr. Guilherme Martins - jgmsantos@gmail.com.</li>
-<li>Dia 1: 30/11/2022.
+<li>Dia 1: 03/10/2022.
 <ul>
-<li>Duração: 2 horas (16h00-18h00).</li>
+<li>Duração: 1h30m (17h30-19h00).</li>
 </ul>
 </li>
-<li>Dia 2: 01/12/2022.
+<li>Dia 2: 04/10/2022.
 <ul>
-<li>Duração: 2horas (16h00-18h00).</li>
+<li>Duração: 1h30m (17h30-19h00).</li>
 </ul>
 </li>
-<li>Local: Fundeb - Sala Urano.</li>
+<li>Dia 3: 05/10/2022.
+<ul>
+<li>Duração: 1h30m (17h30-19h00).</li>
+</ul>
+</li>
+<li>Carga horária: 4,5 horas.</li>
 </ul>
 <h2 id="conte%C3%BAdo-program%C3%A1tico">Conteúdo programático</h2>
 <ul>
@@ -405,6 +410,12 @@ code {
 <p>Link para comprar o livro:</p>
 <p><a href="https://www.amazon.com.br/Python-Para-An%C3%A1lise-Dados-Tratamento/dp/8575226479/ref=sr_1_6?crid=3IQMCPU8VU8AG&amp;keywords=python+para+analise+de+dados&amp;qid=1693326265&amp;sprefix=Python+para+Analise+de+Dados%2Caps%2C268&amp;sr=8-6">Link para Amazon</a></p>
 <img src="./scripts/capa_livro.jpg" width="20%" height="20%">
+<h2 id="crescimento-do-python">Crescimento do Python</h2>
+<img src="./scripts/python.png" width="40%" height="40%">
+<p>Fonte: <a href="https://insights.stackoverflow.com/trends?tags=python%2Cjava%2Cphp%2Cjavascript%2Cr">stackoverflow</a></p>
+<h2 id="bibliotecas-python-mais-utilizadas">Bibliotecas Python mais utilizadas</h2>
+<img src="./scripts/bibliotecas_python.png" width="40%" height="40%">
+<p>Fonte: <a href="https://insights.stackoverflow.com/trends?tags=pandas%2Cnumpy%2Cmatplotlib">stackoverflow</a></p>
 <h2 id="material-de-apoio">Material de apoio</h2>
 <ul>
 <li><a href="https://drive.google.com/file/d/15_62F9lb21XDhCsYL_YoKIuuAATNWpNw/view">Aplicações de Python em Geociências</a></li>
@@ -419,7 +430,7 @@ code {
 </ul>
 <h2 id="cria%C3%A7%C3%A3o-do-ambiente-virtual">Criação do ambiente virtual</h2>
 <ul>
-<li>Para criar um ambiente virtual para quem usa conda, basta digitar o comando abaixo. E para quem não usa, basta seguir para o próximo item de instalação de bibliotecas.</li>
+<li>Para criar um ambiente virtual para quem usa conda, basta digitar o comando abaixo. E para quem não usa, seguir para o próximo item de instalação de bibliotecas.</li>
 </ul>
 <p><code>conda create -n cbagro python=3.9.12</code></p>
 <h2 id="instala%C3%A7%C3%A3o-de-bibliotecas">Instalação de bibliotecas</h2>
@@ -448,6 +459,9 @@ code {
 <li>cap. 11.7, pag 438</li>
 <li>tabela 11.4, pag 406</li>
 <li>pag 292, junções no dataframe</li>
+<li>indices climaticos (NDCS, NDT&gt;30°C)</li>
+<li>merge de DF</li>
+<li>processar NaN e preencher dados ausentes</li>
 </ul>
 
 </body>
