--- a/README.html
+++ b/README.html
@@ -390,9 +390,9 @@ code {
 <h2 id="conte%C3%BAdo-program%C3%A1tico">Conteúdo programático</h2>
 <img src="figuras/fluxo_trabalho.jpg" width="100%" height="100%">
 <h2 id="recomenda%C3%A7%C3%A3o-de-leitura">Recomendação de leitura</h2>
-<p>O livro <strong>Python Para Análise de Dados: Tratamento de Dados com Pandas, NumPy e IPython</strong> é uma excelente porta de entrada para quem deseja se tornar cientista de dados.</p>
-<p>Link para comprar o livro:</p>
-<p><a href="https://www.amazon.com.br/Python-Para-An%C3%A1lise-Dados-Tratamento/dp/8575226479/ref=sr_1_6?crid=3IQMCPU8VU8AG&amp;keywords=python+para+analise+de+dados&amp;qid=1693326265&amp;sprefix=Python+para+Analise+de+Dados%2Caps%2C268&amp;sr=8-6">Link para Amazon</a></p>
+<p>O livro <strong>Python Para Análise de Dados: Tratamento de Dados com Pandas, NumPy &amp; Jupyter</strong> é uma excelente porta de entrada para quem deseja se tornar cientista de dados.</p>
+<p>Link para comprar o livro. <strong>No dia 27/09/2023 o valor era de R$ 139,05</strong>.</p>
+<p><a href="https://www.amazon.com.br/Python-Para-An%C3%A1lise-Dados-Tratamento/dp/8575228412/ref=sr_1_1?__mk_pt_BR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&amp;crid=1G73UGM7TMGFI&amp;keywords=Python+Para+An%C3%A1lise+de+Dados%3A+Tratamento+de+Dados+com+Pandas%2C+NumPy+e+IPython&amp;qid=1695821092&amp;sprefix=python+para+an%C3%A1lise+de+dados+tratamento+de+dados+com+pandas+numpy+e+ipython%2Caps%2C241&amp;sr=8-1&amp;ufe=app_do%3Aamzn1.fos.6d798eae-cadf-45de-946a-f477d47705b9">Link para Amazon</a></p>
 <img src="figuras/capa_livro.jpg" width="25%" height="25%">
 <h2 id="crescimento-do-python">Crescimento do Python</h2>
 <img src="figuras/python.jpg" width="60%" height="60%">
@@ -428,16 +428,6 @@ code {
 <h2 id="frase-motivacional">Frase motivacional</h2>
 <ul>
 <li>Sabemos muitos, mas não sabemos tudo.</li>
-</ul>
-<h2 id="anota%C3%A7%C3%B5es">Anotações</h2>
-<ul>
-<li>tabela 5.8, pag 211</li>
-<li>cap. 11.7, pag 438</li>
-<li>tabela 11.4, pag 406</li>
-<li>pag 292, junções no dataframe</li>
-<li>indices climaticos (NDCS, NDT&gt;30°C)</li>
-<li>merge de DF</li>
-<li>processar NaN e preencher dados ausentes</li>
 </ul>
 
 </body>
